[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Hole-Full.png" type="Texture" id=1]
[ext_resource path="res://Assets/Hole-Open.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/scripts/Hole.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "full",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.7242, 15.5263 )

[node name="Hole" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "open"
centered = false

[node name="HoleFill" type="Area2D" parent="."]
position = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoleFill"]
shape = SubResource( 2 )

[node name="PlayerBlock" type="StaticBody2D" parent="."]
position = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBlock"]
shape = SubResource( 3 )
[connection signal="area_entered" from="HoleFill" to="." method="_on_HoleFill_area_entered"]
